to fix the blur on ios and fix the delete message when unfriend

--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -3075,7 +3075,7 @@ input[type=range]::-ms-tooltip {
     -o-filter: blur(10px);
     -ms-filter: blur(10px);
     filter: blur(10px);
-    filter: url(blur.svg#blur);
+    /* filter: url(blur.svg#blur); */
 }
 
 label.error{
